@@ -5,6 +5,7 @@ $Id$
 	nvmecmds.cpp, nvmecmds.h, nvmeprint.cpp, nvmeprint.h, smartctl.cpp:
 	Add options '-l error[,NUM]' and '-l nvmelog,PAGE,SIZE' for NVMe
 	devices.
+	scsicmds.cpp: dStrHex(): Don't print trailing spaces.
 	smartctl.8.in: Document '-l error[,NUM]', '-l nvmelog,PAGE,SIZE'
 	and '-r nvmeioctl'.
 
